# framedex

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: face_db.py  index_videos.py  master_index.py  query.py  setup.py  trip_summary.py
src/framedex/: __init__.py  face_db.py  index_videos.py  master_index.py  parsing.py  query.py  trip_summary.py
tests/: test_index_videos.py  test_master_index.py  test_parsing.py  test_query.py
